<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contacts">Add contacts</string>
    <string name="contacts">Contacts</string>
    <string name="add">add</string>
    <string name="how_do_u_want_to_add_your_contact">How do u want to add your contact?</string>
    <string name="device">Device</string>
    <string name="create">Create</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="save">Save</string>
</resources>