<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".createContact.CreateContactFragment">

    <TextView
        android:id="@+id/textViewEmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_new_contact"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_name"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmp" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_phone_number"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etName" />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/edit_text_border"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>